[gd_scene load_steps=11 format=3 uid="uid://dkb3k2d5herlc"]

[ext_resource type="Script" uid="uid://bb3r68emws7el" path="res://prefabs/player_controller/player_controller.gd" id="1_0wyvo"]
[ext_resource type="Script" uid="uid://cqpetmdxup32n" path="res://prefabs/player_controller/player_camera.gd" id="2_84kli"]
[ext_resource type="Script" uid="uid://da0ljg2cy42rf" path="res://classes/interaction_system/inventory.gd" id="2_kknyg"]
[ext_resource type="Script" uid="uid://oxrexd2jmwmd" path="res://prefabs/player_controller/player_interaction_ray.gd" id="3_suhf0"]
[ext_resource type="Script" uid="uid://cdetoieh865v1" path="res://prefabs/player_controller/flashlight.gd" id="5_5mn7m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w43h4"]
radius = 0.4
height = 1.8

[sub_resource type="Animation" id="Animation_xb8bn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CapsuleShape3D_w43h4")]
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0wyvo"]
radius = 0.4
height = 1.0

[sub_resource type="Animation" id="Animation_w43h4"]
resource_name = "crawl"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("CapsuleShape3D_w43h4"), SubResource("CapsuleShape3D_0wyvo")]
}
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 1.75, 0, 0.5, 1, 0, 1, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ridk"]
_data = {
&"RESET": SubResource("Animation_xb8bn"),
&"crawl": SubResource("Animation_w43h4")
}

[node name="PlayerController" type="CharacterBody3D"]
script = ExtResource("1_0wyvo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_w43h4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6ridk")
}

[node name="CanStandUpRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 1.1, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)
script = ExtResource("2_84kli")

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="InteractionRay" type="RayCast3D" parent="Head/Camera3D" node_paths=PackedStringArray("inventory")]
target_position = Vector3(0, 0, -2.5)
script = ExtResource("3_suhf0")
inventory = NodePath("../../../Inventory")

[node name="Flashlight" type="SpotLight3D" parent="Head/Camera3D"]
light_energy = 2.5
light_indirect_energy = 5.0
shadow_enabled = true
spot_range = 7.5
spot_angle = 35.0
spot_angle_attenuation = 0.25
script = ExtResource("5_5mn7m")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("2_kknyg")
metadata/_custom_type_script = "uid://da0ljg2cy42rf"
